--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3005,7 +3005,7 @@ input[type=checkbox]:checked + .check-box::before,
     margin: 0;
     padding: 5px 8px;
     white-space: nowrap;
-    margin: auto;
+    /* margin: auto; */
     border-radius: 20px;
     background: var(--light-color);
     cursor: pointer;
@@ -3075,6 +3075,7 @@ input[type=checkbox]:checked + .check-box::before,
 /* =======================develope_bina css========================= */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+.bgcream-product{position: relative;padding-bottom: 145px;}
 .bgcream{background-color: #e9e4e4;}
 .mobile_hr_card{ background-color:#F5F5F5; padding: 12px 16px; border-radius:10px ; -webkit-border-radius:10px ; -moz-border-radius:10px ; 
     -ms-border-radius:10px ; -o-border-radius:10px ; margin: 15px 0px;font-family: 'Montserrat', sans-serif; }
@@ -3190,6 +3191,39 @@ input[type=checkbox]:checked + .check-box::before,
     font-size: 31px!important;
     display: block; background-color: #E36F04; color: #fff;padding: 15px; 
     text-align: center;color: #fff!important; font-weight: bold;text-transform:capitalize;}
+    .sticky-bottom {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        margin-bottom: 30px;
+    }
+
+ .middlesec {
+        height: 500px;
+        overflow-y: scroll;
+   
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -3234,4 +3268,9 @@ input[type=checkbox]:checked + .check-box::before,
             }
             a.sticky-button-bottom{
                 font-size: 15px!important;}
+              
+                .middlesec {
+                    height: 300px;
+                    overflow-y: scroll;
+                }
 }
