--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3076,8 +3076,8 @@ input[type=checkbox]:checked + .check-box::before,
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
-.bgcream-product{position: relative;padding-bottom: 145px;    background-color: #E9E4E4;}
-.bgcream{background-color: #e9e4e4;}
+.bgcream-product{position: relative;padding-bottom: 145px;    background-color: #fff;}
+.bgcream{background-color: #fff;}
 .mobile_hr_card{ background-color:#F5F5F5; padding: 12px 16px; border-radius:10px ; -webkit-border-radius:10px ; -moz-border-radius:10px ; 
     -ms-border-radius:10px ; -o-border-radius:10px ; margin: 15px 0px;font-family: 'Montserrat', sans-serif; }
     .mobile_hr_card .mainimg{
