--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3028,6 +3028,7 @@ input[type=checkbox]:checked + .check-box::before,
     padding: 2px 10px;
     border-radius: 1.5rem;
     width: 82px;
+    display: none;
 }
 
 .wp-help-btn span,
@@ -3080,7 +3081,7 @@ input[type=checkbox]:checked + .check-box::before,
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
-.bgcream-product{position: relative;padding-bottom: 145px;    background-color: #fff;}
+.bgcream-product{position: relative; background-color: #fff;}
 .bgcream{background-color: #fff;}
 .mobile_hr_card{ background-color:#F5F5F5; padding: 12px 16px; border-radius:10px ; -webkit-border-radius:10px ; -moz-border-radius:10px ; 
     -ms-border-radius:10px ; -o-border-radius:10px ; margin: 15px 0px;font-family: 'Montserrat', sans-serif; }
@@ -3196,19 +3197,7 @@ input[type=checkbox]:checked + .check-box::before,
     font-size: 31px!important;
     display: block; background-color: #E36F04; color: #fff;padding: 15px; 
     text-align: center;color: #fff!important; font-weight: bold;text-transform:capitalize;}
-    .sticky-bottom {
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-        left: 0;
-        margin-bottom: 30px;
-    }
 
- .middlesec {
-        height: 500px;
-        overflow-y: scroll;
-   
-    }
 
 
     main.promain {
@@ -3274,18 +3263,15 @@ input[type=checkbox]:checked + .check-box::before,
             p.fruite-location ,  p.fruite-location span{font-size: 10px!important;font-style: italic;color: #000; font-weight: 600;padding-left: 0px;
             }
             a.sticky-button-bottom{
-                font-size: 15px!important;}
+                font-size: 15px!important;
+            
+            }
               
-                .middlesec {
-                    height: 422px;
-                    overflow-y: scroll;
-                    /* margin-top: -24px!important; */
-                }
-
+            .sticky-bottom{margin-bottom: 15px;    position: relative!important;}
 
                 .bgcream-product {
-              
-                    padding-bottom: 100px;
+              position: relative;
+                    padding-bottom: 00px;
               
                 }
                 .newClass{position: fixed;
@@ -3308,6 +3294,21 @@ input[type=checkbox]:checked + .check-box::before,
                         align-items: center;
                         justify-content: space-between;
                     }
+                   .sticky2 {
+                        position: fixed!important;
+                        width: 100%;
+                        bottom: 0!important;
+                        left: 0;
+                        margin-bottom: 0px;
+                    } 
+                    /* .sticky-bottom {
+                        position: fixed!important;
+                        width: 100%;
+                        bottom: 0!important;
+                        left: 0;
+                        margin-bottom: 0px;
+                    } */
+                  
 
             }
 
